; ModuleID = '/home/carl/AnghaBench/git/extr_http-walker.c_release_object_request.c'
source_filename = "/home/carl/AnghaBench/git/extr_http-walker.c_release_object_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_request = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"fd leakage in release: %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.object_request*)* @release_object_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_object_request(%struct.object_request* %0) #0 {
  %2 = alloca %struct.object_request*, align 8
  store %struct.object_request* %0, %struct.object_request** %2, align 8
  %3 = load %struct.object_request*, %struct.object_request** %2, align 8
  %4 = getelementptr inbounds %struct.object_request, %struct.object_request* %3, i32 0, i32 1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = icmp ne %struct.TYPE_2__* %5, null
  br i1 %6, label %7, label %21

7:                                                ; preds = %1
  %8 = load %struct.object_request*, %struct.object_request** %2, align 8
  %9 = getelementptr inbounds %struct.object_request, %struct.object_request* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, -1
  br i1 %13, label %14, label %21

14:                                               ; preds = %7
  %15 = load %struct.object_request*, %struct.object_request** %2, align 8
  %16 = getelementptr inbounds %struct.object_request, %struct.object_request* %15, i32 0, i32 1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @error(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %19)
  br label %21

21:                                               ; preds = %14, %7, %1
  %22 = load %struct.object_request*, %struct.object_request** %2, align 8
  %23 = getelementptr inbounds %struct.object_request, %struct.object_request* %22, i32 0, i32 0
  %24 = call i32 @list_del(i32* %23)
  %25 = load %struct.object_request*, %struct.object_request** %2, align 8
  %26 = call i32 @free(%struct.object_request* %25)
  ret void
}

declare dso_local i32 @error(i8*, i32) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @free(%struct.object_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
